-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.8
-
-
13
-
2e09bf6c57 (qt/qtconnectivity/dev) dfcf63a2f3 (qt/qtconnectivity/6.3) 8751dafdca (qt/qtconnectivity/6.2) 8751dafdca (qt/tqtc-qtconnectivity/6.2) ceac17d0e9 (qt/tqtc-qtconnectivity/5.15)
-
Team One Foundation Sprint 51, Team One Foundation Sprint 52
User informed us about bluetooth connectivity issue on Monterey.
On macOs High Sierra, Mojave, Catalina and Big Sur the issue has not appeared.
"
- we have an application built with Qt 5.15.5 that runs without errors on previous version of macOs than Monterey. On Monterey, when we try to search for bluetooth devices or to pair a new bluetooth, the app crashes.
- with Qt 5.15.8 the application doesn't crash and we can search and pair bluetooth devices. But now we cannot connect to the device we have previously paired.
"
Example project has been attached.
Please note that the Mac address is fixed in it.
- relates to
-
QTBUG-99701 Bluetooth RFComm [Inbound] connection issue with Monterey
-
- Open
-
-
QTBUG-99703 BT LE test fail with macOS monterey
-
- Closed
-
-
QTBUG-100160 macOS: Bluetooth LE does not work
-
- Closed
-
| For Gerrit Dashboard: QTBUG-100303 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 395400,3 | Improve bluetooth service discovery on macOS Monterey | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 396401,2 | Improve bluetooth service discovery on macOS Monterey | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 396402,2 | Improve bluetooth service discovery on macOS Monterey | 6.3 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 396403,3 | Improve bluetooth service discovery on macOS Monterey | tqtc/lts-5.15 | qt/tqtc-qtconnectivity | Status: MERGED | +2 | 0 |